# FRM-G5

./: README.md
Lab1/: EV3  README.md
Lab2a/: README.md
Lab2a/pubvel.dir/: CXX.includecache  DependInfo.cmake  depend.internal
Lab2a/ros/devel/: setup.sh
Lab2a/ros/devel/lib/pkgconfig/: pruebas.pc
Lab2a/ros/devel/lib/pruebas/: hello  pubvel  subpose
Lab2a/ros/devel/share/pruebas/cmake/: pruebasConfig.cmake
Lab2a/ros/src/pruebas/: CMakeLists.txt  hello.cpp  package.xml  pubvel.cpp  pypubvel.py  pysubpose.py  subpose.cpp  triangle.py  turtlesimservice.py
Lab2a/ros/src/pruebas/launch/: p.launch
Lab2b/: README.md  ROSConnectionMindstorms.lmsp
Lab2b/Arduino/EV3I2C/: EV3I2C.ino
Lab2b/Arduino/EV3I2CTest/: EV3I2CTest.ino
Lab2b/Mindstorms/: ArduinoEV3.ev3
Lab2b/ev3_arduino/src/: HMI.py
Lab2c/: README.md  firsttry.py
Lab3/: README.md
Lab3/Code/: IncertidumbreSensores 1.lmsp  IncertidumbreSensores.lmsp  RunLidar2.m  Sample1.csv  Scan2.csv  Scan3.csv  SetupLidar.m  iplot.m  ultrasound3.m
Lab3/Code/ultrasonido/: readme.md  ultrasonido.mlx  ultrasonidoV2.mlx  ultrasonidoV3.mlx  ultrasonidoV4.mlx
Lab3/Datos/: Sample2.csv  Sample3.csv  Scan1.csv
Lab4/: README.md
Lab4/CodeEV3/: Mision1.lmsp  Mision2.lmsp
pubvel.dir/: build.make  depend.make  link.txt
